@@ -43,6 +43,8 @@ linotp (3.1~0dev-0) experimental; urgency=low
   * support the assignment of multiple tokens within one request to
     prevent raceconditions for example with token_count policies
   * getotp view is now working with python3
+  * Token validity period (stored in UTC) is now compared against current
+    time in UTC instead of the server's timezone.
 
  -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Thu, 12 Nov 2020 17:48:51 +0200
 
